tests/misc/fallback_test/expected/033_closure_crash.php.expected
src/033_closure_crash.php:2 PhanParamTooFewCallable Call with 1 arg(s) to \intdiv(int $num1, int $num2) (as a provided callable) which requires 2 arg(s) defined at internal:0
src/033_closure_crash.php:2 PhanSyntaxError Cannot use empty array elements in arrays
src/033_closure_crash.php:2 PhanTypeMismatchArgumentInternalProbablyReal Argument 1 ($num1) is new SimpleXMLElement('<a></a>') of type \SimpleXMLElement|\Traversable|iterable but \intdiv() takes int
src/033_closure_crash.php:2 PhanTypeMismatchArgumentInternal Argument 1 ($string) is call_user_func_array('intdiv', [,new SimpleXMLElement('<a></a>')]) of type int but \strlen() takes string
